
* ChocTop no longer solely for Cocoa applications
* Applications shortcut only included if the primary target is a .app bundle

== 0.10.0 2009-06-11

* Extra files supported: +add_file 'project/path/to/file_or_folder_or_bundle', :position => [x, y]+

== 0.9.7 2009-05-17

* New config option: s.build_type = ENV['BUILD_TYPE'] || 'Release' [kdbdallas]
* permit SUFeedURL to not be specified (cleanly exit from deploy rake tasks)
* removed unused 'appcast' rake task

== 0.9.6 2009-02-10

* Custom Applications Icons!!!
* New config option: s.application_icon = "xxx.png"
* New config option: s.icon_text_size = 12
* rake dmg NO_BUILD=1 will skip the build step
* The background image no longer appears in the "real time" design of the DMG as its in .background folder

== 0.9.5 2009-02-03

* Fixed whitespace in project names bug

== 0.9.4 2009-01-31

* ReleaseNotes.txt renamed to release_notes.txt in applications

== 0.9.3 2009-01-29

* install_choctop generates a release_notes.txt file
* 'rake feed' converts release_notes.txt into release_notes.html file for upload
* #name is the project's folder name if info_plist['CFBundleExecutable'] == "${EXECUTABLE_NAME}"
* builder of xml feed flushes immediately now so no more 0 length xml feeds

== 0.9.2 2009-01-29

* fixed instances of "SUFeedURLKey" to "SUFeedURL" due to f@#$-up error message in Sparkle code that led me astray

== 0.9.1 2009-01-29

* default DMG theme is a sky background and plain volume icon
* sparkle xml feed includes a DSA signature
* explicit release_notes property

== 0.9.0 2009-01-28

* 1 major enhancement:
  * Initial release